<resources>
    <string name="app_name">Hotels Haven</string>
    <string-array name="adultGuestArray">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
        <item name="6">6</item>
        <item name="7">7</item>
        <item name="8">8</item>
        <item name="9">9</item>
        <item name="10">10</item>
    </string-array>
    <string-array name="childrenGuestArray">
        <item name="0">0</item>
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
    </string-array>
    <string-array name="childrenGuestAgeArray">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
        <item name="6">6</item>
        <item name="7">7</item>
        <item name="8">8</item>
        <item name="9">9</item>
        <item name="10">10</item>
        <item name="11">11</item>
        <item name="12">12</item>
        <item name="13">13</item>
        <item name="14">14</item>
        <item name="15">15</item>
        <item name="16">16</item>
        <item name="17">17</item>
    </string-array>
    <string-array name="roomArray">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
        <item name="6">6</item>
        <item name="7">7</item>
        <item name="8">8</item>
        <item name="9">9</item>
    </string-array>
    <string name="destinationText">Destination</string>
    <string name="checkInDate">Check-in Date</string>
    <string name="checkOutDate">Check-out Date</string>
    <string name="adultGuest">Adults</string>
    <string name="childrenGuest">Children</string>
    <string name="roomDropdown">Rooms</string>
    <string name="childrenAgesMultiple">Ages of children at checkout</string>
    <string name="childAgeSingle">Age of child at checkout</string>
    <string name="submitButton">Find Hotels</string>
    <string name="destinationPlaceholderText">City, town, postcode</string>
    <string name="dateHintText">dd MMM yyyy</string>
    <string name="about">About us</string>
    <string name="terms">Terms and Conditions</string>
    <string name="privacy">Privacy Policy</string>
    <string name="hotelscombinedUrl"></string>
    <string name="lateroomUrl"></string>
    <string name="interstitialText"></string>
    <string name="url">www.hotelshaven.com</string>
    <string name="aboutus">Hotels Haven came about with one purpose and one purpose only and that is to make our customers our heroes by saving them money each time they book hotels through us.\n
\n
Our customers are our heroes\n
\n
We save you money on hotels booking through comparison\n
\n
We give you variety of prices for a single room\n
\n
Wherever life takes you, find your haven.</string>
</resources>