<?xml version="1.0" encoding="utf-8"?>
<!-- Linear layout start here -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beach"
    android:fadingEdge="horizontal"
    android:orientation="vertical"
tools:context="com.haven.hotels.hotelshaven.MainActivity">

<!-- Text view for Hotels Haven Text -->
<TextView
    android:id="@+id/tv1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingLeft="15dp"
    android:paddingTop="40dp"
    android:shadowColor="@android:color/black"
    android:shadowDx="4"
    android:shadowDy="4"
    android:text="@string/app_name"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:textColor="@android:color/holo_purple"
    android:textSize="50sp"
    android:textStyle="bold|italic"
    android:typeface="sans" />

<!-- Textview for Destination text -->
<TextView
    android:id="@+id/tv3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingTop="30dp"
    android:text="@string/destinationText"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:textColor="@android:color/holo_blue_dark"
    android:textStyle="bold|italic"
    android:typeface="serif" />

<!-- Edit text for entering destination with hint -->
<EditText
    android:id="@+id/et1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:hint="@string/destinationPlaceholderText"
    android:ems="10"
    android:fadingEdgeLength="10dp"
    android:inputType="text"
    android:textAlignment="center" >
    <requestFocus />
</EditText>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/adultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:text="@string/adultGuest"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold|italic"
                android:typeface="serif"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/childrenText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="56dp"
                android:text="@string/childrenGuest"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold|italic"
                android:typeface="serif"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/roomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:text="@string/roomDropdown"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold|italic"
                android:typeface="serif"
                android:textSize="18dp" />

        </TableRow>
    </TableLayout>
    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="0dp">

            <Spinner
                android:id="@+id/adultSpinner"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:entries="@array/adultGuestArray" />

            <Spinner
                android:id="@+id/childrenSpinner"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:entries="@array/childrenGuestArray" />

            <Spinner
                android:id="@+id/roomSpinner"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:entries="@array/roomArray" />
        </TableRow>
    </TableLayout>

<!-- Button for calculating the formula, when pressed, with calculate written over it -->
<Button
    android:id="@+id/ib1"
    android:layout_width="158dp"
    android:layout_height="51dp"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:fadingEdge="vertical"
    android:longClickable="true"
    android:nextFocusRight="@color/black"
    android:text="@string/submitButton"
    android:visibility="visible" />

<!-- Text view for showing result -->
<TextView
    android:id="@+id/tv4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingTop="20dp"
    android:text=""
    android:textSize="20dp"
    android:textStyle="bold"
    android:textColor="@android:color/holo_orange_dark"/>

</LinearLayout>
    <!-- Linear layout ends here -->
